<resources>
    <string name="app_name">MimiVisionAI</string>
    <string name="new_user">New User ?</string>
    <string name="welcome_to_mimi">Welcome to MiMi</string>
    <string name="username">Username:</string>
    <string name="email_id">Email Id:</string>
    <string name="password">Password:</string>
    <string name="create_account">Create Account</string>
    <string name="log_out">Log Out</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="already_have_account">ALREADY HAVE ACCOUNT</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password1">Password</string>
    <string name="textview">TextView</string>
    <string name="heading">Heading</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="new_user1">NEW USER?</string>
    <string name="rtd_button">rtd button</string>
    <string name="run_model">Run model</string>
    <string name="main_page">Main page</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="listen">Listen</string>
    <string name="victoria">Victoria</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="listener">Listener</string>
    <string name="user_say">User Say</string>
    <string name="reponse">Reponse</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
