<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/main_splash2"
    tools:context=".mia.StartActivity">

    <TextView
        android:id="@+id/textView"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_above="@+id/start_login_btn"
        android:layout_alignParentStart="true"
        android:text="@string/welcome_to_mimi"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="Welcome To MiMi" />

    <Button
        android:id="@+id/start_reg_btn"
        android:layout_width="212dp"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:background="@android:color/background_light"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/new_user1"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <Button
        android:id="@+id/start_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="156dp"
        android:background="@android:color/holo_green_dark"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/already_have_account"
        android:textAlignment="center"
        android:textColor="?attr/colorBackgroundFloating"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="328dp"
        android:layout_height="254dp"
        android:layout_above="@+id/textView"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/newfeatures_1x1"
        android:contentDescription="@string/todo" />

</RelativeLayout>