<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/slide_image"
        android:layout_width="128dp"
        android:layout_height="123dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        app:srcCompat="@drawable/main_chat_icon"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/slide_heading"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/slide_image"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="260dp"
        android:text="@string/heading"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/slide_desc"
        android:layout_width="match_parent"
        android:layout_height="147dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/slide_heading"
        android:layout_marginBottom="111dp"
        android:paddingTop="40dp"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textColor="@color/colorTransparentWhite"
        android:textSize="16sp" />
</RelativeLayout>