<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:orientation="vertical" >



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/btnSpeak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/listener"
            android:src="@drawable/ico_mic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tap_on_mic"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="normal" />

    </LinearLayout>
<!--
    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/docu"
        android:layout_width="207dp"
        android:layout_height="222dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="108dp"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="268dp"
        android:src="@drawable/docubot" />-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_say"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/txtSpeechInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textColor="#AB70B9"
            android:textSize="26sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reponse"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/outputTex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textColor="#69C76C"
            android:textSize="26sp"
            android:textStyle="normal" />
    </LinearLayout>

    <Button
        android:id="@+id/backBtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="50dp"
        android:background="@android:color/transparent"
        android:text="@string/back"
        android:textColor="@android:color/background_light"
        android:visibility="visible"
        tools:visibility="visible" />


</RelativeLayout>