<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".mia.RegisterActivity">

    <include
        android:id="@+id/register_toolbar"
        layout="@layout/app_layout_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/reg_user_name"
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="220dp"
        android:paddingLeft="20dp"
        android:paddingRight="30dp"
        app:layout_constraintBottom_toTopOf="@+id/reg_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/reg_user_name1"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:hint="@string/username"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/reg_email"
        android:layout_width="364dp"
        android:layout_height="67dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:paddingLeft="20dp"
        android:paddingRight="30dp"
        app:layout_constraintBottom_toTopOf="@+id/reg_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_user_name">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/reg_email1"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/reg_password"
        android:layout_width="365dp"
        android:layout_height="70dp"
        android:layout_marginBottom="23dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:paddingLeft="20dp"
        android:paddingRight="30dp"
        app:layout_constraintBottom_toTopOf="@+id/reg_create_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_email">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/reg_password1"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/reg_create_btn"
        android:layout_width="179dp"
        android:layout_height="48dp"
        android:layout_marginBottom="140dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="19dp"
        android:backgroundTint="@android:color/darker_gray"
        android:paddingEnd="30dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/create_account"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_password"
        app:layout_constraintVertical_bias="0.207" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="367dp"
        android:layout_height="51dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:text="@string/create_a_new_account"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintBottom_toTopOf="@+id/reg_user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_toolbar"
        app:layout_constraintVertical_bias="1.0" />
</android.support.constraint.ConstraintLayout>